css/index.css
* {
    box-sizing: border-box;
}

html, body {
    margin: 0;
    height: 100%;
    background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
}

.main {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 10px;
}

.profile-img-area {
    width: 300px;
    height: 300px;
    margin-bottom: 30px;
}

#profile-img {
    width: 300px;
    height: 300px;
    border-radius: 50%;
    position: absolute;
    background: url("../images/ryan.jpg");
    opacity: 0.5;
}

.clock {
    position: relative;
    width: 300px;
    height: 300px;
    border: 5px solid #000000;
    border-radius: 50%;
    margin-bottom: 30px;
}
  
.movement {
    position: absolute;
    top: 147px;
    left: 147px;
    width: 130px;
    height: 6px;
    transform-origin: 0% 50%;
    transform: rotate(30deg);
}
  
.hand {
    position: absolute;
    top: 0;
    left: 0;
    border-radius: 5px;
    background-color: #000000;
    transform-origin: 0% 50%;
}
  
.hour > .hand {
    width: 110px;
    height: 10px;
    animation: clock_movement 43200s linear infinite;
}
  
.minute > .hand {
    width: 125px;
    height: 10px;
    animation: clock_movement 3600s linear infinite;
}
  
.second > .hand {
    width: 130px;
    height: 4px;
    background-color: rgb(248, 54, 54);
    animation: clock_movement 60s linear infinite;
}
  
  
@keyframes clock_movement {
    0%   { transform: rotate(-90deg); }
    100% { transform: rotate(270deg); }
}

.intro-text-area {
    width: 100%;
}

.intro-text-area > p {
    text-align: center;
    font-size: 25px;
    font-weight: 700;
    margin: 0;
}

.link-btn-area {
    width: 100%;
    margin-top: 30px;
    display: grid;
    grid-template-columns: 85px 85px 85px 85px 85px;
    grid-gap: 12px;
    justify-items: center;
    justify-content: center;
}

.link-btn {
    width: 85px;
    height: 85px;
    font-size: 58px;
    text-align: center;
    color: rgb(255, 255, 255);
    border-radius: 15px;
    cursor: pointer;
}

.link-btn-area > #profile {
    background-color: rgb(245, 47, 47);
}

.link-btn-area > #github {
    background-color: rgb(247, 174, 39);
}

.link-btn-area > #linkedin {
    background-color: rgb(17, 179, 17);
}

.link-btn-area > #blog {
    background-color: rgb(21, 107, 235);
}

.link-btn-area > #mail {
    background-color: rgb(167, 21, 167);
}

@media (max-width: 450px) {
    .link-btn-area {
        grid-template-columns: 85px 85px 85px;
    }
}

